# lectern-slides

./: .gitignore  CHANGELOG.md  CLAUDE.md  PDF-EXPORT.md  README.md  ROADMAP.md  SPECIFICATION.md  deck.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/sample-deck/: README.md  deck.toml  japandi-preview.html
examples/sample-deck/_partials/: principles.md  qualifications.md
examples/sample-deck/assets/: d3-bars.html  webgl-triangle.html
examples/sample-deck/slides/: 00-title.md  10-agenda.md  20-qualifications.md  22-ranges.md  25-code.md  26-diagram.md  27-icons.md  28-image-sizing.md  30-background.md  32-image.md  40-incremental.md  45-layout.md  50-animation.md  55-webgl.md  60-table.md  70-math.md  80-closing.md
examples/sample-deck/themes/: japandi.css  midnight.css  paper.css
src/lectern/: __init__.py  a11y.py  assets.py  cli.py  config.py  errors.py  fontawesome.py  metadata.py  outline.py  preprocess.py  ranges.py  remark_compat.py  serve.py  slides.py  source.py  sourcemap.py  theming.py
src/lectern/pdf/: __init__.py  colors.py  geometry.py  grayscale.py  impose.py  master.py  options.py  pipeline.py  posters.py  printcss.py
src/lectern/render/: __init__.py  _external.py  base.py  lowering.py  marp.py  quarto.py  remark.py  reveal.py
src/lectern/themes/: base.css  (+11 more)
tests/: conftest.py  test_a11y.py  test_assets.py  test_cli.py  test_config.py  test_config_layering.py  test_external_deck.py  test_fontawesome.py  test_golden.py  test_lowering_notes.py  test_metadata.py  test_outline.py  test_pdf.py  test_preprocess.py  test_ranges.py  test_remark_compat.py  test_render_marp.py  test_render_quarto.py  test_render_remark.py  test_render_reveal.py  test_serve.py  test_slides.py  test_theming.py
tests/fixtures/: deck.assembled.golden.md
(+15 files in other folders)
